<resources>
    <string name="app_name">Tasks</string>
    <string name="Todo">Todo</string>
    <string name="mobile_pro">mobile_pro</string>
    <string name="description">description</string>
    <string name="Title">title</string>
    <string name="Start_date">start_date</string>
    <string name="end_date">end_date</string>
    <string name="set_reminder">set_reminder</string>
    <string name="save">save</string>
    <string name="Tasks">Tasks</string>
    <string name="todo">Todo</string>
    <string name="subtask">Subtask:</string>
    <string name="add">Add</string>
    <string name="reminder">Reminder</string>
    <string name="progress">progress:</string>
    <string name="upload">upload</string>
    <string name="title">title</string>
    <string name="start_date">date</string>
</resources>