<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <!-- Main task input fields -->
    <EditText
        android:id="@+id/taskTitle"
        android:layout_width="402dp"
        android:layout_height="58dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:autofillHints="autofill"
        android:background="@color/white"
        android:hint="@string/title"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColorHint="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/taskDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/taskTitle"
        android:layout_margin="10dp"
        android:layout_marginVertical="10dp"
        android:autofillHints="autofill"
        android:background="@color/white"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColorHint="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/taskStartDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/taskDescription"
        android:layout_margin="10dp"
        android:autofillHints="autofill"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:hint="@string/start_date"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/taskEndDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/taskStartDate"
        android:layout_margin="10dp"
        android:autofillHints="autofill"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:hint="@string/end_date"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        tools:ignore="TextFields" />

    <!-- Button to add subtasks -->


    <!-- Subtasks input fields -->

    <!-- Button to save the task with subtasks -->
    <!-- EditText for subtask -->

    <Button
        android:id="@+id/buttonSetReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/subtaskContainer"
        android:layout_marginStart="10dp"
        android:layout_marginTop="11dp"
        android:padding="10dp"
        android:text="@string/reminder"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/subtaskContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/taskEndDate"
        android:orientation="vertical">


        <EditText
            android:id="@+id/subtask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subtask"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:padding="10dp"
            android:background="@color/white"
            android:layout_margin="10dp"
            android:autofillHints="autofill"
            android:inputType="text" />

        <Button
            android:id="@+id/addSubtaskBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="312dp"
            android:text="@string/add" />
    </LinearLayout>

    <!-- Button to add subtask -->

    <Button
        android:id="@+id/uploadBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonSetReminder"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="312dp"
        android:text="@string/upload" />

    <TextView
        android:id="@+id/selectedFileTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/uploadBtn"
        android:layout_alignParentStart="true"
        android:layout_marginStart="112dp"
        android:layout_marginTop="-57dp"
        android:text="Selected File URI"
        android:textSize="20sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonSetReminder"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="26dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp" />

</RelativeLayout>
